# SDSU_Mechatronics_USB_Protocol

./: .gitignore  README.md  install.sh
client_c/include/: usb_protocol_client.h
client_c/src/: usb_device_handle.c  usb_protocol_client.c
client_py/: client.py  usb_protocol.py
example/: CMakeLists.txt  note.txt  test.c
hardware/rp2040/: CMakeLists.txt
hardware/sam/: CMakeLists.txt  flash.py
hardware/sam/src/main/: usb_main.c
hardware/sam/src/protocol/: CMakeLists.txt  README.md
hardware/sam/src/protocol/include/actions/: usb_actions.h
hardware/sam/src/protocol/src/actions/: usb_actions.c
hardware/sam/src/protocol/src/subtopics/: motor.c
protocol/: CMakeEx.txt  CMakeLists.txt  README.md  main.c  usb_test.c
protocol/include/: usb_protocol.h
protocol/include/actions/: usb_actions.h
protocol/include/parser/: msg_types.h  usb_flags.h  usb_parse.h
protocol/include/subtopics/: system.h
protocol/include/topics/: usb_topics.h
protocol/src/actions/: usb_actions.c
protocol/src/parser/: usb_flags.c  usb_parse.c
protocol/src/subtopics/: motor.c  power.c  system.c
server_c/: CMakeLists.txt
test/Trash_RP2040_USB/: main.c
